# AtlasVLA

./: .gitignore  00_START_HERE.md  CONTRIBUTING.md  DEBUG_SOLUTION.md  EVAL_FILES_SUMMARY.md  EVAL_IMPLEMENTATION_SUMMARY.md  EVAL_INDEX.md  EVAL_QUICK_START.md  EVAL_README.md  FINAL_REPORT.md  GITHUB_SETUP.md  GITHUB_SETUP_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  INSTALL.md  LICENSE  PUSH_TO_GITHUB.sh  QUICK_START.md  README.md  README_CN.md  RECOMMENDED_CONFIG_28GB.yaml  RECOMMENDED_CONFIG_LLAMA_FINETUNE.yaml  SETUP_GITHUB.md  USER_REQUIREMENTS_SUMMARY.md  VGGT_SUBMODULE.md  pyproject.toml  requirements.txt  setup.py  test_config_fix.py  test_model_loading.py
.github/: PULL_REQUEST_TEMPLATE.md
atlas/: DEBUG_DISTRIBUTED_TRAINING.md  DEBUG_TOKEN_ISSUE.md  HUGGINGFACE_TOKEN_SETUP.md  MODEL_PATH_VERIFICATION.md  README.md  README_TRAINING.md  TROUBLESHOOTING_LLAMA3.md  __init__.py  eval.py  example_usage.py  requirements.txt  test_imports.py  test_token.py  train.py
doc/: ANSWERS.md  ARCHITECTURE_IMPROVEMENTS.md  CONTRIBUTING.md  DATASET_INFO.md  DISTRIBUTED_TRAINING_EXPLAINED.md  FIX_REMOTE.md  GPU_SELECTION_USAGE.md  HUGGINGFACE_DATASET_SUPPORT.md  LIBERO_100_DOWNLOAD_INFO.md  LIBERO_10_FINETUNE_GUIDE.md  LIBERO_DATA_SOURCE_COMPARISON.md  LOGGING_CONFIG.md  MEMORY_OPTIMIZATION.md  MULTI_GPU_TRAINING.md  QUICK_ANSWER.md  QUICK_REFERENCE.md  QUICK_START_LIBERO_10.md  QUICK_START_UNIFIED.md  README.md  TRAINING_CODE_IMPROVEMENTS.md  TRAINING_CONCEPTS.md  TRAINING_FLOW.md  TRAIN_SCRIPT_USAGE.md  USING_HUGGINGFACE_DATA.md  WANDB_QUICK_START.md  WANDB_SETUP.md
(+97 files in other folders)
